# pydddantic

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
pydddantic/: __init__.py  uuid_value.py
tests/: test_entity.py  test_immutable_entity.py  test_unique_id.py  test_uuid_value.py  test_value.py  test_value_object.py
tests/aes/: test_event_sourced_aggregate.py
tests/eda/: test_message_bus.py
