[tool.poetry]
name = "pydddantic"
version = "0.1.0"
description = "A Pydantic-Based Domain-Driven Design Framework"
authors = ["Dave Sutherland <dave@alphalayer.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^6.0.0"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
isort = "^5.12.0"
artifacts-keyring = "^0.3.4"

[[tool.poetry.source]]
name = "alphalayer-publish"
url = "https://pkgs.dev.azure.com/alphalayerai/Packages/_packaging/Python/pypi/upload/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | __pycache__
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
lines_between_sections = 1
line_length = 120
multi_line_output = 3
sections = [
    "FUTURE",
    "STANDARD_LIBRARY",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
extra_standard_library = ["typing_extensions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pydddantic"]
